Fix xray sync, add command async handling